resolved spacing issues

--- a/asset/style/product-card.css
+++ b/asset/style/product-card.css
@@ -488,7 +488,7 @@
     .add-to-cart,
     .quantity-input,
     .wishlist {
-        height: 28px !important;
+        height: 30px !important;
         font-size: 0.85rem !important;
         /*min-width: 50px !important;*/
         padding: 0 3px !important;
@@ -517,20 +517,23 @@
     }
 
     .quantity-control {
-        height: 26px !important;
+        height: 30px !important;
+        flex: 0 0 80px !important;
+        min-width: 80px !important;
+        width: 80px !important;
     }
 
     .quantity-control .btn-qty {
         width: 22px !important;
         min-width: 22px !important;
-        height: 26px !important;
+        height: 30px !important;
         font-size: 12px !important;
     }
 
     .quantity-control .quantity-input {
         width: 28px !important;
         min-width: 28px !important;
-        height: 26px !important;
+        height: 30px !important;
         font-size: 11px !important;
     }
 
